--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
-			<div id="bg"></div>
+			<div id="13"></div>
 			<div id="overlay"></div>
 			<div id="main">
 
@@ -46,4 +46,5 @@
 			window.onorientationchange = function() { document.body.scrollTop = 0; }
 		</script>
 	</body>
+
 </html>
