--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Adam Jensen</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<h1>Giuseppe Di Bisceglie/h1>
+						<p>Musician  &nbsp;&bull;&nbsp;;Sound Desinger</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -48,3 +48,4 @@
 	</body>
 
 </html>
+
