--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Giuseppe Di Bisceglie/h1>
-						<p>Musician  &nbsp;&bull;&nbsp;;Sound Desinger</p>
+						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -48,4 +48,5 @@
 	</body>
 
 </html>
+
 
