--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Giuseppe Di Bisceglie/h1>
+						<h1>Giuseppe Di Bisceglie</h1>
 						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
 						<nav>
 							<ul>
@@ -48,6 +48,7 @@
 	</body>
 
 </html>
+
 
 
 
