--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
-			<div id="bg"></div>
+			<div id="13"></div>
 			<div id="overlay"></div>
 			<div id="main">
 
 				<!-- Header -->
 					<header id="header">
 						<h1>Giuseppe Di Bisceglie</h1>
-						<p>Security Chief &nbsp;&bull;&nbsp; Cyborg &nbsp;&bull;&nbsp; Never asked for this</p>
+						<p>Musician &nbsp;&bull;&nbsp; Sound Designer &nbsp;&bull;&nbsp; Electroacustic composer</p>
 						<nav>
 							<ul>
 								<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -48,6 +48,7 @@
 	</body>
 
 </html>
+
 
 
 
