--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body class="is-preload">
 		<div id="wrapper">
-			<div id="13"></div>
+			<div id="bg"></div>
 			<div id="overlay"></div>
 			<div id="main">
 
@@ -48,6 +48,7 @@
 	</body>
 
 </html>
+
 
 
 
